Fixed some spacing

--- a/styles/SimStyle.css
+++ b/styles/SimStyle.css
@@ -69,17 +69,25 @@ a{
 	grid-gap: 56px;
 }
 
+.development-portfolio-container{
+	display: grid;
+	grid-template-columns: repeat(1, minmax(100px, 1fr));
+	grid-gap: 72px;
+}
+
 .web-design-grid-container{
 	display: grid;
 	grid-template-columns: repeat(1, minmax(100px, 1fr));
 	grid-gap: 72px;
 }
 
-.development-portfolio-container{
+.creative-grid-container{
 	display: grid;
 	grid-template-columns: repeat(1, minmax(100px, 1fr));
 	grid-gap: 72px;
 }
+
+
 
 .portfolio-container{
 	display: grid;
@@ -101,7 +109,7 @@ a{
 .development-grid-container{
 	display: grid;
 	grid-template-columns: repeat(1, minmax(100px, 1fr));
-	grid-gap: 2rem;
+	grid-gap: 72px;
 }
 
 .project-date{
@@ -196,11 +204,7 @@ a{
 	width:360px;
 }
 
-.creative-grid-container{
-	display: grid;
-	grid-template-columns: repeat(1, minmax(100px, 1fr));
-	grid-gap: 12px;
-}
+
 
 .project-description-container{
 	padding-left: 12px;
@@ -262,37 +266,13 @@ ul.project-link-list li a:active {
 /*Large Devices (Desktops, 992px - 1200px):*/
 /* Styles for screens between 992px and 1200px wide */
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
-	.development-grid-container{
-		display: grid;
-		grid-template-columns: repeat(1, minmax(100px, 1fr));
-		grid-gap: 12px;
-	}
-	.creative-grid-container{
-		display: grid;
-		grid-template-columns: repeat(1, minmax(100px, 1fr));
-		grid-gap: 12px;
-	}
 
-	.development-portfolio-container{
-		display: grid;
-		grid-template-columns: repeat(1, minmax(100px, 1fr));
-		grid-gap: 12px;
-	}
 }
 
 /*Medium Devices (Small Laptops, 768px - 992px):*/
 /* Styles for screens between 768px and 992px wide */
 @media only screen and (min-width: 768px) and (max-width: 992px) {
-	.development-grid-container{
-		display: grid;
-		grid-template-columns: repeat(1, minmax(100px, 1fr));
-		grid-gap: 12px;
-	}
-	.creative-grid-container{
-		display: grid;
-		grid-template-columns: repeat(1, minmax(100px, 1fr));
-		grid-gap: 12px;
-	}
+
 	.project-image-description-container{
 		flex-direction:column;
 	}
@@ -302,16 +282,7 @@ ul.project-link-list li a:active {
 /*Small Devices (Tablets, 600px - 768px):*/
 /* Styles for screens between 600px and 768px wide */
 @media only screen and (min-width: 600px) and (max-width: 768px) {
-	.development-grid-container{
-		display: grid;
-		grid-template-columns: repeat(1, minmax(100px, 1fr));
-		grid-gap: 12px;
-	}
-	.creative-grid-container{
-		display: grid;
-		grid-template-columns: repeat(1, minmax(100px, 1fr));
-		grid-gap: 12px;
-	}
+
 
 	.project-image-description-container{
 		flex-direction:column;
@@ -321,16 +292,7 @@ ul.project-link-list li a:active {
 /*Extra Small Devices (Phones, <600px):*/
 /* Styles for screens less than 600px wide */
 @media only screen and (max-width: 600px) {
-	.development-grid-container{
-		display: grid;
-		grid-template-columns: repeat(1, minmax(100px, 1fr));
-		grid-gap: 12px;
-	}
-	.creative-grid-container{
-		display: grid;
-		grid-template-columns: repeat(1, minmax(100px, 1fr));
-		grid-gap: 12px;
-	}
+
 
 	.project-image-description-container{
 		flex-direction:column;
